--- a/CursoHTML-aula1/bio.html
+++ b/CursoHTML-aula1/bio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Biografia - João Paulo</title>
+		<title>Biografia - João Paulo Valdivieso</title>
 		<meta charset="utf-8">
 		<link rel="icon" href="favicon.png">
 		<link rel="stylesheet" href="bio.css">
